--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -21,13 +21,23 @@
     "axios": "^0.20.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@dew/plugin-kernel": "^1.0.0",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
+    "browserify": "^16.5.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-uglify": "^3.0.2",
     "jest": "^26.4.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
+    "tsify": "^5.0.2",
     "typescript": "^4.0.2",
-    "rimraf": "^3.0.2"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
