--- a/service/aggregation/src/test/resources/application-test.yml
+++ b/service/aggregation/src/test/resources/application-test.yml
@@ -24,3 +24,4 @@ modules:
         appInfoCacheExpireSec: 0
   - clazzPackage: idealworld.dew.serviceless.cache.CacheModule
   - clazzPackage: idealworld.dew.serviceless.http.HttpModule
+  - clazzPackage: idealworld.dew.serviceless.task.TaskModule
