--- a/framework/parent/pom.xml
+++ b/framework/parent/pom.xml
@@ -95,6 +95,18 @@
                     <groupId>org.mindrot</groupId>
                     <artifactId>jbcrypt</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.truffle</groupId>
+                    <artifactId>truffle-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.js</groupId>
+                    <artifactId>js</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.js</groupId>
+                    <artifactId>js-scriptengine</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
