--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -17,17 +17,14 @@
   "license": "Apache-2.0",
   "author": "gudaoxuri",
   "dependencies": {
-    "@types/crypto-js": "^4.0.1",
     "@types/inquirer": "^7.3.1",
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
-    "crypto-js": "^4.0.0",
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
-    "simple-git": "^2.23.0",
-    "moment": "^2.29.0"
+    "simple-git": "^2.23.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
