Front-end sample debugging and functional improvement.

--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dew/cli",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Dew Serviceless CLI",
   "main": "dist/index",
   "types": "dist/index",
@@ -17,8 +17,8 @@
   "license": "Apache-2.0",
   "author": "gudaoxuri",
   "dependencies": {
+    "@dew/sdk": "^0.1.0",
     "@types/inquirer": "^7.3.1",
-    "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
