--- a/terminals/lerna.json
+++ b/terminals/lerna.json
@@ -1,16 +1,24 @@
 {
-  "version": "0.1.1",
+  "version": "0.2.0",
   "npmClient": "yarn",
   "command": {
     "publish": {
-      "ignoreChanges": ["ignored-file", "*.md", "*.adoc"],
+      "ignoreChanges": [
+        "ignored-file",
+        "*.md",
+        "*.adoc"
+      ],
       "message": "chore(release): publish",
       "registry": "https://npm.pkg.github.com"
     },
     "bootstrap": {
       "ignore": "component-*",
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
-  "packages": ["packages/*"]
+  "packages": [
+    "packages/*"
+  ]
 }
