--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dew/cli",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Dew Serviceless CLI",
   "main": "dist/index",
   "types": "dist/index",
@@ -17,7 +17,7 @@
   "license": "Apache-2.0",
   "author": "gudaoxuri",
   "dependencies": {
-    "@dew/sdk": "^0.1.0",
+    "@dew/sdk": "^0.2.0",
     "@types/inquirer": "^7.3.1",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "rimraf": "^3.0.2"
+    "typescript": "^4.0.2"
   },
   "bin": {
     "dewcli": "bin/dewcli"
