--- a/terminals/packages/plugin-kernel/package.json
+++ b/terminals/packages/plugin-kernel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dew/plugin-kernel",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Dew Serviceless plugin Kernel",
   "main": "dist/index",
   "types": "dist/index",
@@ -18,7 +18,7 @@
   "license": "Apache-2.0",
   "author": "gudaoxuri",
   "dependencies": {
-    "@dew/sdk": "^0.1.0",
+    "@dew/sdk": "^0.2.0",
     "@types/node-rsa": "^1.0.0",
     "acorn": "^8.0.4",
     "axios": "^0.20.0",
@@ -30,9 +30,9 @@
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "jest": "^26.4.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "rimraf": "^3.0.2"
+    "typescript": "^4.0.2"
   }
 }
