--- a/terminals/packages/plugin-gulp/package.json
+++ b/terminals/packages/plugin-gulp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dew/plugin-gulp",
+  "name": "@idealworld/plugin-gulp",
   "version": "0.1.1",
   "description": "Dew Serviceless plugin Gulp",
   "main": "dist/index",
@@ -18,7 +18,7 @@
   "license": "Apache-2.0",
   "author": "gudaoxuri",
   "dependencies": {
-    "@dew/plugin-kernel": "^0.1.1",
+    "@idealworld/plugin-kernel": "^0.1.1",
     "@types/crypto-js": "^4.0.1",
     "@types/through2": "^2.0.36",
     "gulp-util": "^3.0.8",
