--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dew/sdk",
+  "name": "@idealworld/sdk",
   "version": "0.1.1",
   "description": "Dew Serviceless SDK",
   "main": "dist/index",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@dew/plugin-kernel": "^0.1.1",
+    "@idealworld/plugin-kernel": "^0.1.1",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "browserify": "^16.5.2",
