Try publishing to npm.

--- a/terminals/packages/plugin-kernel/package.json
+++ b/terminals/packages/plugin-kernel/package.json
@@ -34,5 +34,6 @@
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "gitHead": "cae2208aa2ac70689b44ffda236599ce115100da"
 }
