--- a/terminals/lerna.json
+++ b/terminals/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.2",
+  "version": "0.0.0",
   "npmClient": "yarn",
   "command": {
     "publish": {
@@ -8,8 +8,7 @@
         "*.md",
         "*.adoc"
       ],
-      "message": "chore(release): publish",
-      "registry": "https://npm.pkg.github.com"
+      "message": "chore(release): publish"
     },
     "bootstrap": {
       "ignore": "component-*",
