--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -35,5 +35,8 @@
   "bin": {
     "dewcli": "bin/dewcli"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "92f0ec9a9087ecf0d9b24bcadedf27c6526d3176"
 }
