--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -44,5 +44,8 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "92f0ec9a9087ecf0d9b24bcadedf27c6526d3176"
 }
