--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -2,8 +2,7 @@
   "name": "@idealworld/cli",
   "version": "0.1.3",
   "description": "Dew Serviceless CLI",
-  "main": "dist/index",
-  "types": "dist/index",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -15,7 +14,14 @@
     "start": "tsc && node bin/dewcli"
   },
   "license": "Apache-2.0",
-  "author": "gudaoxuri",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ideal-world/dew-serviceless"
+  },
+  "author": {
+    "name": "gudaoxuri",
+    "email": "i@sunisle.org"
+  },
   "dependencies": {
     "@idealworld/sdk": "^0.1.3",
     "@types/inquirer": "^7.3.1",
