--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -2,8 +2,7 @@
   "name": "@idealworld/sdk",
   "version": "0.1.3",
   "description": "Dew Serviceless SDK",
-  "main": "dist/index",
-  "types": "dist/index",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -17,10 +16,17 @@
     "prepublishOnly": "yarn run build"
   },
   "license": "Apache-2.0",
-  "author": "gudaoxuri",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ideal-world/dew-serviceless"
+  },
+  "author": {
+    "name": "gudaoxuri",
+    "email": "i@sunisle.org"
+  },
   "dependencies": {
     "@types/crypto-js": "^4.0.1",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
     "moment": "^2.29.0"
   },
