Try publishing to npm.

--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -2,7 +2,8 @@
   "name": "@idealworld/cli",
   "version": "0.1.4",
   "description": "Dew Serviceless CLI",
-  "main": "dist/index.js",
+  "main": "dist/index",
+  "typings": "dist/index",
   "files": [
     "dist"
   ],
