Try publishing to npm.

--- a/terminals/tsconfig.json
+++ b/terminals/tsconfig.json
@@ -6,6 +6,8 @@
         "packages/*/src"
       ]
     },
+    "declaration": true,
+    "declarationMap": true,
     "target": "es6",
     "module": "commonjs",
     "strict": true,
