--- a/terminals/lerna.json
+++ b/terminals/lerna.json
@@ -1,6 +1,7 @@
 {
   "version": "0.1.7",
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "command": {
     "publish": {
       "ignoreChanges": [
