--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -2,10 +2,10 @@
   "name": "@idealworld/sdk",
   "version": "0.1.7",
   "description": "Dew Serviceless SDK",
-  "main": "dist/index",
-  "typings": "dist/index",
+  "main": "index",
+  "typings": "index",
   "files": [
-    "dist"
+    "../../dist/sdk"
   ],
   "scripts": {
     "clean": "rimraf ./dist && rimraf tsconfig.build.tsbuildinfo",
@@ -29,12 +29,12 @@
     "@types/crypto-js": "^4.0.1",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
-    "moment": "^2.29.0"
+    "moment": "^2.29.0",
+    "sdk": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@idealworld/plugin-kernel": "^0.1.7",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "browserify": "^16.5.2",
