--- a/terminals/tsconfig.json
+++ b/terminals/tsconfig.json
@@ -6,6 +6,7 @@
         "packages/*/src"
       ]
     },
+    "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
     "target": "es6",
@@ -17,5 +18,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": [
+    "packages/*/src"
+  ]
 }
