--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -2,17 +2,17 @@
   "name": "@idealworld/cli",
   "version": "0.1.9",
   "description": "Dew Serviceless CLI",
-  "main": "index",
-  "typings": "index",
+  "main": "dist/index",
+  "typings": "dist/index",
   "files": [
     "bin",
-    "../../dist/cli"
+    "dist"
   ],
   "scripts": {
     "clean": "rimraf ./dist && rimraf tsconfig.build.tsbuildinfo",
     "compile": "tsc -b",
     "build": "yarn run clean && yarn run compile",
-    "prepublishOnly": "yarn run build",
+    "prePublish": "cpx  ../../dist/cli/src/** ./dist",
     "start": "tsc && node bin/dewcli"
   },
   "license": "Apache-2.0",
@@ -38,7 +38,8 @@
     "@types/node": "^14.6.2",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "cpx": "1.5.0"
   },
   "bin": {
     "dewcli": "bin/dewcli"
