--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idealworld/cli",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Dew Serviceless CLI",
   "main": "dist/index",
   "typings": "dist/index",
@@ -36,10 +36,10 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
+    "cpx": "1.5.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "cpx": "1.5.0"
+    "typescript": "^4.0.2"
   },
   "bin": {
     "dewcli": "bin/dewcli"
