--- a/terminals/packages/plugin-kernel/package.json
+++ b/terminals/packages/plugin-kernel/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "clean": "rimraf ./dist && rimraf tsconfig.build.tsbuildinfo",
     "compile": "tsc -b",
-    "build": "yarn run clean && yarn run compile",
+    "build": "yarn run clean && yarn run compile && yarn run prePublish",
     "test": "jest",
     "testC": "jest --coverage --no-cache",
-    "prepublishOnly": "yarn run build"
+    "prePublish": "cpx ../../dist/plugin-kernel/src/** ./dist"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
+    "cpx": "1.5.0",
     "jest": "^26.4.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
