--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "clean": "rimraf ./dist && rimraf tsconfig.build.tsbuildinfo",
     "compile": "tsc -b",
-    "build": "yarn run clean && yarn run compile",
+    "build": "yarn run clean && yarn run compile && yarn run prePublish",
     "gulp": "gulp",
     "test": "jest",
     "testC": "jest --coverage --no-cache",
-    "prepublishOnly": "yarn run build"
+    "prePublish": "cpx ../../dist/sdk/src/** ./dist"
   },
   "license": "Apache-2.0",
   "repository": {
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.12.11",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
+    "cpx": "1.5.0",
     "browserify": "^16.5.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
