--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -29,8 +29,7 @@
     "@types/crypto-js": "^4.0.1",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
-    "moment": "^2.29.0",
-    "sdk": "^0.5.0"
+    "moment": "^2.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
