--- a/terminals/packages/cli/package.json
+++ b/terminals/packages/cli/package.json
@@ -24,6 +24,10 @@
     "name": "gudaoxuri",
     "email": "i@sunisle.org"
   },
+  "keywords": [
+    "dew",
+    "serverless"
+  ],
   "dependencies": {
     "@idealworld/sdk": "^0.1.13",
     "@types/inquirer": "^7.3.1",
