--- a/terminals/packages/sdk/package.json
+++ b/terminals/packages/sdk/package.json
@@ -25,6 +25,10 @@
     "name": "gudaoxuri",
     "email": "i@sunisle.org"
   },
+  "keywords": [
+    "dew",
+    "serverless"
+  ],
   "dependencies": {
     "@types/crypto-js": "^4.0.1",
     "axios": "^0.21.1",
@@ -32,24 +36,14 @@
     "moment": "^2.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
-    "browserify": "^16.5.2",
     "cpx": "1.5.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
     "jest": "^26.4.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
-    "tsify": "^5.0.2",
-    "typescript": "^4.0.2",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "typescript": "^4.0.2"
   },
   "publishConfig": {
     "access": "public"
