--- a/terminals/packages/plugin-kernel/package.json
+++ b/terminals/packages/plugin-kernel/package.json
@@ -32,7 +32,7 @@
     "@idealworld/sdk": "^0.1.16",
     "acorn": "^8.0.4",
     "browserify": "^17.0.0",
-    "tinyify": "^3.0.0"
+    "terser": "^5.5.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.12",
@@ -43,6 +43,12 @@
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "dew": {
+    "serverUrl": "",
+    "appId": 0,
+    "ak": "",
+    "sk": ""
   },
   "publishConfig": {
     "access": "public"
