--- a/terminals/tsconfig.json
+++ b/terminals/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
