--- a/terminals/packages/plugin-gulp/package.json
+++ b/terminals/packages/plugin-gulp/package.json
@@ -13,8 +13,8 @@
     "build": "yarn run clean && yarn run compile && yarn run prePublish",
     "test": "jest",
     "testC": "jest --coverage --no-cache",
-    "testToTaskModule": "gulp testToTaskModule",
-    "testIT": "gulp testIT",
+    "testToTaskModule": "cross-env NODE_ENV=prod gulp testToTaskModule",
+    "testIT": "cross-env NODE_ENV=prod gulp testIT",
     "prePublish": "cpx ../../dist/plugin-gulp/src/** ./dist"
   },
   "license": "Apache-2.0",
@@ -48,7 +48,8 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "cross-env": "^7.0.3"
   },
   "publishConfig": {
     "access": "public"
