--- a/terminals/packages/plugin-gulp/package.json
+++ b/terminals/packages/plugin-gulp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idealworld/plugin-gulp",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Dew Serviceless plugin Gulp",
   "main": "dist/index",
   "typings": "dist/index",
@@ -32,13 +32,14 @@
     "gulpplugin"
   ],
   "dependencies": {
-    "@idealworld/plugin-kernel": "^0.2.4"
+    "@idealworld/plugin-kernel": "^0.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "cpx": "1.5.0",
+    "cross-env": "^7.0.3",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify-es": "^2.0.0",
@@ -48,8 +49,7 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "cross-env": "^7.0.3"
+    "vinyl-source-stream": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
