--- a/terminals/packages/plugin-gulp/package.json
+++ b/terminals/packages/plugin-gulp/package.json
@@ -56,7 +56,7 @@
   },
   "gitHead": "92f0ec9a9087ecf0d9b24bcadedf27c6526d3176",
   "dew": {
-    "serverUrl": "",
-    "appId": ""
+    "serverUrl": "http://127.0.0.1:8888",
+    "appId": "app1"
   }
 }
