--- a/framework/parent/pom.xml
+++ b/framework/parent/pom.xml
@@ -58,7 +58,7 @@
         <testcontainers.version>1.15.0</testcontainers.version>
 
         <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
-        <checkstyle.config.path>../checkstyle.xml</checkstyle.config.path>
+        <checkstyle.config.path>../../checkstyle.xml</checkstyle.config.path>
 
         <main.verticle></main.verticle>
     </properties>
