--- a/terminals/pom.xml
+++ b/terminals/pom.xml
@@ -35,6 +35,7 @@
     <properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <checkstyle.skip>true</checkstyle.skip>
         <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
     </properties>
 
